*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Updated build scripts and dependencies.
* Assigned more correct names for sidechain types.
* Now gate allows to work in reverse-operation mode.

=== 1.0.6 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Updated plugin metadata (contributed by Dennis Braun).
* Updated dependencies and build scripts.

=== 1.0.3 ===
* Initial release.
